--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<ol>
+		<li>Clothes</li>
+		<li>Mobile</li>
+		<li>Grosery</li>
+	</ol>
+	<ul>
+		<li>Kedarnath</li>
+		<li>Somnath</li>
+		<li>MahaBaleswarem</li>
+	</ul>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
