added attributes and elments in list

--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
 	<ol>
-		<li>Clothes</li>
-		<li>Mobile</li>
-		<li>Grosery</li>
+		<li data-ns-test="shoppingList">Clothes</li>
+		<li data-ns-test="shoppingList">Mobile</li>
+		<li data-ns-test="shoppingList">Grosery</li>
 	</ol>
 	<ul>
-		<li>Kedarnath</li>
-		<li>Somnath</li>
-		<li>MahaBaleswarem</li>
+		<li data-ns-test="holidayList">Kedarnath</li>
+		<li data-ns-test="holidayList">Somnath</li>
+		<li data-ns-test="holidayList">MahaBaleswarem</li>
 	</ul>
 
 	<!-- the entire body must be written by student -->
